# waste

./: .env.example  .env.test.example  .gitignore  .prettierignore  .prettierrc  README.md  biome.json  mise.toml  package.json  readme.md  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: api-tests.yml  codeql.yml  marimo.yml
apps/api/: .env.example  .prettierrc  README.md  biome.json  deno.json  package.json  readme.md  test-runner.ts  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.ts  index.ts
apps/api/src/cmd/: server.ts
apps/api/src/internal/config/: config.ts
apps/api/src/internal/container/: container.ts
apps/api/src/internal/database/: connection.ts  queries.ts
apps/api/src/lib/: auth.ts  create-app.ts  db.ts  middleware.ts  validation.ts
apps/api/src/routes/: admin.ts  auth.ts  citizen.ts  driver.ts  trucks.ts
apps/api/tests/: README.md  admin.test.ts  auth.test.ts  auth.ts  base-test.ts  citizen.test.ts  config.ts  database.ts  db.ts  driver.test.ts  fixtures.ts  health.test.ts  helpers.ts  http.ts  integration.test.ts  main.ts  password-reset.test.ts  scenarios.ts  setup.ts  types.ts  user-manager.ts  utils.ts
apps/api/tests/admin/: assignments.test.ts  routes.test.ts  trucks.test.ts
apps/api/tests/citizen/: issues.test.ts  profile.test.ts  truck-status.test.ts
apps/api/tests/driver/: route.test.ts
apps/api/tests/helpers/: auth-helper.ts  auth.ts  client.ts  database.ts  db-helper.ts  test-client.ts  test-setup.ts  test-users.ts
apps/app_nueva/android/app/: build.gradle.kts
apps/app_nueva/test/: widget_test.dart
apps/citizen/: .gitignore  app.json  babel.config.js  cesconfig.jsonc  package.json  prettier.config.js  tailwind.config.js  tsconfig.json
apps/citizen/app/: _layout.tsx
apps/citizen/app/(tabs)/: _layout.tsx  index.tsx  learn.tsx  profile.tsx  report.tsx  schedule.tsx
apps/citizen/components/: Container.tsx  Page.tsx  ScreenContent.tsx
apps/citizen/components/ui/: EducationCard.tsx  Screen.tsx  TruckStatusCard.tsx  index.tsx
apps/citizen/constants/: colors.ts  wasteTypes.ts
apps/citizen/contexts/: AppContext.tsx
apps/citizen/lib/: store.ts
apps/citizen/lib/api/: truck.api.ts
apps/citizen/lib/stores/: truck.store.ts
apps/citizen/lib/types/: truck.types.ts
apps/citizen/mocks/: collections.ts  reports.ts  sortingGuide.ts  trucks.ts
apps/citizen/services/: api.ts
apps/citizen/src/app/: _layout.tsx  help.tsx  privacy.tsx  terms.tsx  truck-map.tsx
apps/citizen/src/constants/: app-config.ts  design-tokens.ts  waste-types.ts
apps/citizen/src/types/: index.ts
apps/citizen/types/: index.ts
apps/driver/: pubspec.yaml
apps/driver/lib/: main.dart
apps/driver/lib/services/: api_service.dart
apps/gps_tracker/: README.md  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  pubspec.yaml  version.json
apps/gps_tracker/assets/: NOTICES
apps/server/: db.json  package.json  routes.json
apps/web/: .gitignore  biome.json  drizzle.config.ts  env.example  next.config.ts  package.json  tsconfig.json
apps/web/drizzle/: 0000_slim_the_fallen.sql
apps/web/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/web/src/: middleware.ts  providers.tsx  routes.ts
apps/web/src/actions/: auth.ts  dashboard.ts  drivers.ts  routes.ts  vehicles.ts
apps/web/src/actions/user/: me.ts  (+1 more)
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx
apps/web/src/components/: add-driver-modal.tsx  add-user-modal.tsx  dashboard.tsx
apps/web/src/db/: index.ts  types.ts
apps/web/src/lib/: api.ts  constants.ts  env.ts
apps/web/src/providers/: index.tsx
datasets/: .gitignore  README.md  main.py  mise.toml  pyproject.toml  readme.md  requirements.txt
datasets/files/: A._DataSet_Residuos_municipales_generados_anualmente_unificado.csv  A_Dataset_Generacion_anual_de_residuos_sólidos_domiciliarios_y_municipales.csv
datasets/geojson/: peru_distrital_simple.geojson
datasets/scripts/: prerender_marimo.py
datasets/src/: 01-waste-generation-analysis.py  01-waste-generation.py  02-valorization-analysis.py  02-valorization.py  03-lima-population-map.py  03-population-map.py  _helpers.py  andres.ipynb  centroids.gpkg  data-utils.py  data_downloader.py  example.gpkg  index.py  main.html  main.py  output  output.html  recomendaciones_valorizacion.json  utils.py
datasets/src/__marimo__/session/: 01-waste-generation-analysis.py.json  02-valorization-analysis.py.json  03-lima-population-map.py.json  index.py.json
datasets/src/public/geojson/: departamental.geojson  provincial.geojson
datasets/src/public/residuos/: manifest.json
datasets/src/utils/: datasets.py  files.py
(+250 files in other folders)
