[project]
name = "src"
version = "0.1.0"
description = "Add your description here"

license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Pedro Rojas", email = "pedro.rojas.f24@gmail.com" },
    { name = "David Duran", email = "davidamos.duran@unmsm.edu.pe" },
]

dependencies = [
    "altair>=5.5.0",
    "beautifulsoup4>=4.13.5",
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "marimo==0.15.2",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "plotly[express]>=6.3.0",
    "polars>=1.33.1",
    "requests>=2.32.5",
    "shapely>=2.1.1",
]

[tool.ruff]
# extend-exclude = [
#     "datasets/src/main.py",
# ]
fix = true
line-length = 88
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TC",  # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]

extend-safe-fixes = [
    "TC",  # move import from and to TYPE_CHECKING blocks
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = false
lines-between-types = 1
lines-after-imports = 2

[tool.ruff.lint.pep8-naming]
# ruff does not currently implement C0103, so ALL_CAPS constants are incorrectly flagged.
# see: https://github.com/astral-sh/ruff/issues/2964
ignore-names = ["*_DIR"]
