[project]
name = "datasets"
version = "0.2.0"
description = "A collection of notebooks we wrote to analyze the datasets released for #dataton2025."

license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "David Duran", email = "davidamos.duran@unmsm.edu.pe" },
    { name = "Pedro Rojas", email = "pedro.rojas.f24@gmail.com" },
]

dependencies = [
    "altair>=5.5.0",
    "beautifulsoup4>=4.14.2",
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "marimo==0.17.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly[express]>=6.3.1",
    "polars>=1.35.1",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
    "shapely>=2.1.2",
]

[tool.ruff]
fix = true
line-length = 88
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TC",  # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]

extend-safe-fixes = [
    "TC",  # move import from and to TYPE_CHECKING blocks
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-single-line = false
lines-between-types = 1
lines-after-imports = 2

[tool.ruff.lint.pep8-naming]
# ruff does not currently implement C0103, so ALL_CAPS constants are incorrectly flagged.
# see: https://github.com/astral-sh/ruff/issues/2964
ignore-names = ["*"]
